--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,19 +1,5 @@
-server.port=9090
 
-
-
-#db configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/electronic_store
-spring.datasource.username=root
-spring.datasource.password=root
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-
-#creat,update,validate,create-update
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.jpa.generate-ddl=true
+spring.profiles.active=dev
 
 
 
