changes by umesh for create product image Upload API

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -23,4 +23,5 @@ spring.servlet.multipart.max-request-size=10MB
 
 #path config
 user.profile.image.path=images/users/
-
+catagory.image.path=images/category/
+product.image.path=images/product/
